# grindbot

./: AGENTS.md  AGENT_PROMPTS.md  CLI.md  CONFIGURATION.md  CORE_LOOP.md  Cargo.toml  DEPENDENCIES.md  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
.local/state/gh/: device-id
scripts/: release.sh
src/: config.rs  doctor.rs  handoff.rs  lib.rs  main.rs  merge_lock.rs  prompt.rs  state_file.rs  status.rs  supervisor.rs  workspace.rs
src/core/: actions.rs  filters.rs  mod.rs  planner.rs  state.rs
src/io/: filesystem.rs  github.rs  jj.rs  mod.rs  polytoken.rs
src/prompts/: conflict_resolution.md  implementer.md
tests/: cargo_metadata.rs  cli_basics.rs  core_filters.rs  core_planner.proptest-regressions  core_planner.rs  doctor_command.rs  dry_run.rs  handoff_done.rs  integration_supervisor.rs  integration_workspace_setup.rs  readme.rs  status_command.rs  stop_hook.rs
tests/common/: mod.rs
