[package]
name = "grindbot"
version = "0.1.0"
edition = "2024"

[lib]
name = "grindbot"
path = "src/lib.rs"

[[bin]]
name = "grindbot"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jiff = { version = "0.2", features = ["serde"] }
toml = "0.8"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
hegeltest = "=0.27.1"
tempfile = "3"
